fix a error about ranking page style, set vertical align to center on tabel cell

--- a/src/create-pages/templates/ranking/ranking.module.scss
+++ b/src/create-pages/templates/ranking/ranking.module.scss
@@ -51,4 +51,7 @@ $size-avatar: 2rem;
 
 .table {
   margin: 4rem auto;
+  td {
+    line-height: $size-avatar;
+  }
 }
